// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of table main 1`] = `
<div
  className="table-main-container"
>
  <div
    className="table-content"
  >
    <div>
      {}
    </div>
  </div>
  <div>
    {"recordCount":0}
  </div>
</div>
`;

exports[`Table main render with records 1`] = `
<div
  className="table-main-container"
>
  <div
    className="table-content"
  >
    <div>
      {}
    </div>
  </div>
  <div>
    {"entriesViewable":10,"recordCount":10}
  </div>
</div>
`;
